Updating accordion styles to prevent double border on accordion list.

--- a/packages/accordion/src/scss/styles.scss
+++ b/packages/accordion/src/scss/styles.scss
@@ -4,7 +4,10 @@
 
   &:not(.accordion--borderless) {
     border-top: rem(.1) solid $medium-grey;
-    border-bottom: rem(.1) solid $medium-grey;
+
+    &:last-child {
+      border-bottom: rem(.1) solid $medium-grey;
+    }
   }
 
   &__heading {
